<resources>
    <string name="app_name">DoggieDon</string>
    <string name="intro">Stories of Your SuperDog</string>
    <string name="developer">Designed By : Ankit</string>
    <string name="signin">Sign In With Google</string>
    <string name="client_id">374772074763-l3lmmij3i4844u8ep5p1skg9pktua182.apps.googleusercontent.com</string>
    <string name="user_name">Name: %1$s</string>
    <string name="user_phone">Phone: %1$s</string>
    <string name="account_created">Created on: %1$s</string>
    <string name="last_signin">Last Sign-in: %1$s</string>
    <string name="account_metadata">Created on: %1$s&#10;\n\n\nLast sign-in: %2$s</string>
    <string name="blog_count_display">Blogs Posted: %1$d</string>
    <string name="no_user_blogs">This user has not posted any blogs yet.</string>
    <string name="blog_detail_username">Author: %1$s</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="user_email_com">user@email.com</string>
    <string name="name">Name:</string>
    <string name="phone">Phone:</string>
    <string name="created_on_last_sign_in">Created on: \nLast Sign-in:</string>
    <string name="blogs_posted_0">Blogs Posted: 0</string>
    <string name="view_blogs">View Blogs</string>
    <string name="logout">Logout</string>
    <string name="post_blog">Post Blog</string>
    <string name="write_your_post_here">Write your post here...</string>
    <string name="blog_title">Blog Title</string>
    <string name="add_your_blog_here">Add your blog here</string>
    <string name="profile">Profile</string>
    <string name="saved_blogs">Saved Blogs</string>
    <string name="save">Save</string>
    <string name="like">Like</string>
    <string name="no_saved_blogs">No Saved Blog</string>
    <string name="open_website">Open Website</string>
    <string name="donate_shop">Donate/Shop :</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
</resources>